kubernetes/mcp-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-server
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-server
  template:
    metadata:
      labels:
        app: mcp-server
    spec:
      serviceAccountName: mcp-server-sa
      containers:
        - name: mcp-server
          image: henryarrovin/mcp-server:latest
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 15
