kubernetes/mcp-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-server-service
  namespace: auth
spec:
  selector:
    app: mcp-server
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
